[package]
name = "task-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
rand = "0.8.5"
reqwest = "0.11.17"
rocksdb = "0.21.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
warp = "0.3.5"
